Corrects alignment of the menu button

--- a/css/style.css
+++ b/css/style.css
@@ -755,7 +755,7 @@ body {
 
 .mobile__menu-btn {
   position: absolute;
-  top: 30px;
+  top: 12px;
   right: 30px;
   height: 50px;
   width: 50px;
